# lyrebird

./: .gitignore  FLOWS.md  INSTALL.md  README.md  newplan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: plan-delayed-close.md
lyrebird/: __main__.py  cli.py  config.py  dispatch.py  loop_prevention.py  mapping.py  sync.py
lyrebird/handlers/: _cleanup_labels.py  _set_issue_type.py  private_issue_closed.py  private_issue_closed_check.py  private_issue_reopened.py  private_issue_typed.py  private_labels_changed.py  public_comment_created.py  public_comment_deleted.py  public_comment_edited.py  public_issue_edited.py  public_issue_opened.py  public_issue_state.py  public_issue_typed.py  public_labels_changed.py  slash_anon.py  slash_public.py  slash_public_close.py
scripts/: .env.example  README.md  demo-plan.md  demo.sh  deploy.sh  setup-test-repos.sh  sync-labels.sh  test-sync.sh
tests/: conftest.py  test_dispatch.py  test_loop_prevention.py  test_mapping.py  test_sync.py
tests/fixtures/: comment_created.json  comment_deleted.json  comment_edited.json  issue_closed.json  issue_edited.json  issue_labeled.json  issue_opened.json  issue_reopened.json  slash_commands.json
tests/handlers/: test_cleanup_labels.py  test_private_issue_closed.py  test_private_issue_closed_check.py  test_private_issue_reopened.py  test_private_labels_changed.py  test_public_comment_created.py  test_public_comment_deleted.py  test_slash_anon.py  (+7 more)
workflows/: README.md  handle-private-comment.yml  handle-private-issue.yml  handle-public-event.yml  public-dispatch.yml  sync.yml
