[tool.poetry]
name = "lyrebird"
version = "0.1.0"
description = "Public-to-private GitHub issue mirroring"
packages = [{include = "lyrebird"}]

[tool.poetry.scripts]
lyrebird = "lyrebird.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4"
PyGithub = ">=2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
